--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Hux."
+description: "Hey, 这里是王野鸡的地盘."
 header-img: "img/about-bg.jpg"
 ---
 
