--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, 这里是王野鸡的地盘."
-header-img: "img/about-bg.jpg"
+header-img: "https://img.nicebing.com/OHR.MarsTars_ZH-CN0496313394_1920x1080.jpg"
 ---
 
 <!-- Language Selector -->
