--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@ header-img: "img/about-bg.jpg"
 <script type="text/javascript">
     var $zh = document.querySelector(".zh");
     var $q = document.querySelector(".q");
-    var $en = document.querySelector(".w");
+    var $w = document.querySelector(".w");
     function onLanChange(index){
         if(index == 0){
             $zh.style.display = "block";
